@@ -5,11 +5,10 @@ SED=@SED@
 if test -z "$SED" ; then
 SED=sed
 fi
-Xsed="$SED -e s/^X//"
 
 lt_unmangle ()
 {
-   last_result=`echo -n X$1 | $Xsed -e 's#.libs/##' -e 's#[^0-9a-zA-Z_]\+_la##'`
+   last_result=`echo $1 | $SED -e 's#.libs/##' -e 's#[0-9a-zA-Z_\-\.]*_la-##'`
 }
 
 # the tool to wrap (cc, cxx, ar, ranlib, ..)
@@ -28,7 +27,7 @@ while test "$#" -gt 0; do
 
     case $opt in
     --shave-mode=*)
-        mode=`echo "X$opt" | $Xsed -e 's/[-_a-zA-Z0-9]*=//'`
+        mode=`echo $opt | $SED -e 's/[-_a-zA-Z0-9]*=//'`
 	;;
     -o)
         lt_output="$1"
@@ -45,13 +44,20 @@ case "$mode,$tool" in
 link,*)
     pass_through=1
     ;;
-compile,cxx)
+*,cxx)
     Q="  CXX   "
     ;;
-compile,cc|*,*)
-    # no "libtool" mode has been given, we are called by the Makefile:
-    # -> assume compilation
-    mode=compile
+*,cc)
+    Q="  CC    "
+    ;;
+*,fc)
+    Q="  FC    "
+    ;;
+*,f77)
+    Q="  F77   "
+    ;;
+*,*)
+    # should not happen
     Q="  CC    "
     ;;
 esac
